# RinhaBackend2024Q1

./: .env.example  Dockerfile  README.md  docker-compose.yaml  executar-teste-local.sh  gatling-text-report.sh  nginx.conf  pyproject.toml  requirements.txt
load-test/: .gitignore
load-test/user-files/results/rinhabackendcrebitossimulation-20240223165100763/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240223173838336/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240223194425174/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240223235052511/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240224000101020/: index.html  req_cre-ditos-1306955929.html  (+3 more)
src/: application.py
src/config/: database.py  exceptions.py  settings.py
src/controllers/: balance.py  transactions.py
src/models/: customers.py  transactions.py
src/schemas/: transactions.py
src/views/: balance.py  customers_balance.py  customers_transactions.py  homepage.py  transactions.py
(+122 files in other folders)
