[tool.poetry]
name = "rinha-backend"
version = "0.1.0"
description = ""
authors = ["alfmorais <alfredneto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.37.1"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
databases = {extras = ["asyncpg"], version = "^0.8.0"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
pre-commit = "^3.6.1"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
